# Laboratorio-13-

./: CMakeLists.txt  Collezione.cpp  Collezione.h  Collezione_Importante.h  Collezione_Observer.h  Eccezioni.h  Nota.cpp  Nota.h  Observer.h  README  Subject.h  main.cpp
test/: CMakeLists.txt  CollezioneTest.cpp  NotaTest.cpp  runAllTests.cpp
